# project-94544842a8

./: README.md  pyproject.toml  requirements-true.txt  requirements.txt
src/webcam/: __init__.py  motion_detector.py
